<resources>
    <string name="app_name">BloodyGoodGPA</string>
    <string name="title_activity_register">Register</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="rutgers_blood_drive">Rutgers Blood Drive</string>
    <string name="new_user_create_an_account">New user? Create an account.</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="creating_new_user">Creating New User</string>
    <string name="netid">NetID</string>
    <string name="log_in">Log In</string>
    <string name="NetID" />
    <string name="title_activity_user">User</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_admin">Admin</string>
    <string name="see_eligible_courses">See Eligible Courses</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_add_course">AddCourse</string>
</resources>